--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,7 @@
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/hogwarts_courses??useUnicode=true&serverTimezone=UTC
+db.url=jdbc:mysql://localhost:3306/hogwarts_courses
 user=root
 password=bowser20127841845
+useUnicode=useUnicode
+serverTimezone=UTC
 encoding=UTF-8
