--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/hogwarts_courses
 user=root
-#password=bowser20127841845
-password=
+password=bowser20127841845
+#password=
 useUnicode=useUnicode
 serverTimezone=UTC
 encoding=UTF-8
